[package]
name = "nobility"
version = "0.2.0" # Also update html_root_url
authors = ["Tiffany Bennett"]
description = "NBT decoder"
readme = "README.md"
keywords = ["nbt", "minecraft"]
license = "zlib"
edition = "2018"
repository = "https://github.com/tiffany352/nobility"
categories = ["encoding", "parser-implementations", "game-development"]

[features]
default = ["uuid"]

[dependencies]
byteorder = "1.3.4"
cesu8 = "1.1"
flate2 = "1"
uuid = { version = "0.8.1", optional = true }
